--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -161,8 +161,8 @@ OUTPUT = 1-String, 2-String, 3-String, 4-String, 5-String
 ;;Number of Inputs = 1
 
 [update]
-SQL_1 = UPDATE users SET ?=? WHERE uid=?
-SQL1_INPUTS = 3, 1, 2
+SQL1_1 = UPDATE users SET ?=? WHERE uid=?
+SQL1_INPUTS = 1, 2, 3
 Number of Inputs = 3
 
 [updateUsersValueString]
