--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -93,6 +93,10 @@ SQL_1 = UPDATE users SET housecontent=? WHERE uid=?
 SQL1_INPUTS = 1, 2
 Number of Inputs = 2
 
+[updateShop]
+SQL_1 = UPDATE users SET shopcontent=? WHERE uid=?
+SQL1_INPUTS = 1, 2
+Number of Inputs = 2
 
 [updateCarStatus]
 SQL1_1 = UPDATE garage SET statuses=? WHERE license=?
