--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -169,6 +169,31 @@ SQL1_1 = UPDATE users SET ?=? WHERE uid=?
 SQL1_INPUTS = 1, 2, 3
 Number of Inputs = 3
 
+[promoteCop]
+SQL1_1 = UPDATE users SET cop=? WHERE uid=?
+SQL1_INPUTS = 1, 2
+Number of Inputs = 2
+
+[promoteEms]
+SQL1_1 = UPDATE users SET ems=? WHERE uid=?
+SQL1_INPUTS = 1, 2
+Number of Inputs = 2
+
+[promoteFire]
+SQL1_1 = UPDATE users SET fire=? WHERE uid=?
+SQL1_INPUTS = 1, 2
+Number of Inputs = 2
+
+[promoteMafia]
+SQL1_1 = UPDATE users SET mafia=? WHERE uid=?
+SQL1_INPUTS = 1, 2
+Number of Inputs = 2
+
+[promoteLegal]
+SQL1_1 = UPDATE users SET legal=? WHERE uid=?
+SQL1_INPUTS = 1, 2
+Number of Inputs = 2
+
 [updateUsersValueString]
 SQL1_1 = UPDATE users
 SQL1_2 =    SET $CUSTOM_1$ = ?
