--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -48,15 +48,15 @@ Number of Inputs = 20
 
 [updatePlayerInfo]
 ;; Name of call == updatePlayerInfo
-SQL1_1 = UPDATE users SET items=?, cash=?, bank=?, position=?,messages=?, statuses=?, housecontent=?, shopcontent=?, phoneBackground=?, houselevel=?, cop=?, ems=?, mafia=?, fire=?, legal=? WHERE uid=?
-SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16
-Number of Inputs = 16
+SQL1_1 = UPDATE users SET items=?, cash=?, bank=?, position=?,messages=?, statuses=?, housecontent=?, shopcontent=?, phoneBackground=?, houselevel=? WHERE uid=?
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
+Number of Inputs = 11
 
 [updatePlayerInfoNoGear]
 ;; Name of call == updatePlayerInfoNoGear
-SQL1_1 = UPDATE users SET cash=?, bank=?, position=?,messages=?, statuses=?, housecontent=?, shopcontent=?, phoneBackground=?,houselevel=?, cop=?, ems=?, mafia=?, fire=?, legal=? WHERE uid=?
-SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15
-Number of Inputs = 15
+SQL1_1 = UPDATE users SET cash=?, bank=?, position=?,messages=?, statuses=?, housecontent=?, shopcontent=?, phoneBackground=?,houselevel=? WHERE uid=?
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10
+Number of Inputs = 10
 
 
 [playerInfo]
