Przygotowanie pod logowanie

--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -131,7 +131,7 @@ Number of Inputs = 1
 OUTPUT = 1-String, 2-String, 3-String,4-String
 
 [deleteCrime]
-SQL1_1 = DELETE FROM wanted WHERE suspectGUID=?;
+SQL1_1 = DELETE FROM wanted WHERE suspectGUID=?
 SQL1_INPUTS = 1
 Number of Inputs = 1
 
@@ -146,23 +146,31 @@ SQL1_INPUTS = 1, 2, 3, 4, 5
 Number of Inputs = 5
 
 [getCrime]
-SQL1_1 = SELECT caseID, officerGUID, charges, status, evidence FROM wanted WHERE suspectGUID=?;
+SQL1_1 = SELECT caseID, officerGUID, charges, status, evidence FROM wanted WHERE suspectGUID=?
 SQL1_INPUTS = 1
 Number of Inputs = 1
 OUTPUT = 1-String, 2-String, 3-String, 4-String, 5-String
 
 [getCrimeType]
-SQL1_1 = SELECT caseID, officerGUID, charges, status, evidence FROM wanted WHERE status=?;
+SQL1_1 = SELECT caseID, officerGUID, charges, status, evidence FROM wanted WHERE status=?
 SQL1_INPUTS = 1
 Number of Inputs = 1
 OUTPUT = 1-String, 2-String, 3-String, 4-String, 5-String
 
-
+[logEvent]
+SQL1_1 = INSERT INTO logs (uid, type, text, cash, bank) VALUES (?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5
+Number of Inputs = 5
 
 ;;[updateMayor]
 ;;SQL_1 = UPDATE mayor SET mayor=1 WHERE uid=?
 ;;SQL1_INPUTS = 1
 ;;Number of Inputs = 1
+
+;;[resetMayor]
+;;SQL_1 = UPDATE mayor SET mayor=0
+;;SQL1_INPUTS = 0
+;;Number of Inputs = 0
 
 [update]
 SQL1_1 = UPDATE users SET ?=? WHERE uid=?
@@ -199,7 +207,6 @@ SQL1_1 = UPDATE users
 SQL1_2 =    SET $CUSTOM_1$ = ?
 SQL1_3 = WHERE uid = ?;
 SQL1_INPUTS = 2, 1
-
 Number of Inputs = 2
 Number of Custom Inputs = 1
 
