--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -168,7 +168,7 @@ Number of Inputs = 5
 ;;Number of Inputs = 1
 
 ;;[resetMayor]
-;;SQL_1 = UPDATE mayor SET mayor=0
+;;SQL_1 = UPDATE mayor SET mayor=0 WHERE mayor=1
 ;;SQL1_INPUTS = 0
 ;;Number of Inputs = 0
 
