Aktualizacja o imię  i pozycje

--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -158,8 +158,8 @@ Number of Inputs = 1
 OUTPUT = 1-String, 2-String, 3-String, 4-String, 5-String
 
 [logEvent]
-SQL1_1 = INSERT INTO logs (uid, type, text, cash, bank) VALUES (?,?,?,?,?)
-SQL1_INPUTS = 1, 2, 3, 4, 5
+SQL1_1 = INSERT INTO logs (uid, name, type, text, cash, bank, pos) VALUES (?,?,?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7
 Number of Inputs = 5
 
 ;;[updateMayor]
