--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -162,15 +162,21 @@ SQL1_1 = INSERT INTO logs (uid, name, type, text, cash, bank, pos) VALUES (?,?,?
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7
 Number of Inputs = 7
 
-;;[updateMayor]
-;;SQL_1 = UPDATE mayor SET mayor=1 WHERE uid=?
-;;SQL1_INPUTS = 1
-;;Number of Inputs = 1
+[getMayor]
+SQL1_1 = SELECT uid FROM users WHERE mayor=?
+SQL1_INPUTS = 1
+Number of Inputs = 1
+OUTPUT = 1-String
 
-;;[resetMayor]
-;;SQL_1 = UPDATE mayor SET mayor=0 WHERE mayor=1
-;;SQL1_INPUTS = 0
-;;Number of Inputs = 0
+[updateMayor]
+SQL1_1 = UPDATE mayor SET mayor=1 WHERE uid=?
+SQL1_INPUTS = 1
+Number of Inputs = 1
+
+[resetMayor]
+SQL1_1 = UPDATE mayor SET mayor=? WHERE mayor=1
+SQL1_INPUTS = 1
+Number of Inputs = 1
 
 [update]
 SQL1_1 = UPDATE users SET ?=? WHERE uid=?
