--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -60,10 +60,10 @@ Number of Inputs = 10
 
 
 [playerInfo]
-SQL1_1 = SELECT items, cash, bank, cop, ems, position, bankaccount, phoneBackground, messages, statuses, houselevel, housecontent, shopcontent, shopname, mafia, fire, legal, prison, prisonreason FROM users WHERE uid=?
+SQL1_1 = SELECT items, cash, bank, cop, ems, position, bankaccount, phoneBackground, messages, statuses, houselevel, housecontent, shopcontent, shopname, mafia, fire, legal, prison, prisonreason, doughnuts FROM users WHERE uid=?
 SQL1_INPUTS = 1
 Number of Inputs = 1
-OUTPUT = 1,2,3,4,5,6,7,8,9,10,11,12,13,14-String,15,16,17,18,19-String
+OUTPUT = 1,2,3,4,5,6,7,8,9,10,11,12,13,14-String,15,16,17,18,19-String,20
 
 [insertGarage]
 SQL1_1 = INSERT INTO garage (license, class, color, finish, rims, windows, lights, owner,statuses) VALUE (?,?,?,?,?,?,?,?,?)
