--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -108,6 +108,11 @@ SQL1_1 = UPDATE garage SET class=? WHERE license=?
 SQL1_INPUTS = 1, 2
 Number of Inputs = 2
 
+[updateVehOwner]
+SQL1_1 = UPDATE garage SET owner=? WHERE license=?
+SQL1_INPUTS = 1, 2
+Number of Inputs = 2
+
 [insertMail]
 SQL1_1 = INSERT INTO mail (message, title, sender, receiver) VALUES (?,?,?,?)
 SQL1_INPUTS = 1, 2, 3, 4
