--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -98,6 +98,11 @@ SQL1_1 = UPDATE users SET shopcontent=? WHERE uid=?
 SQL1_INPUTS = 1, 2
 Number of Inputs = 2
 
+[updateConnected]
+SQL1_1 = UPDATE users SET connected=? WHERE uid=?
+SQL1_INPUTS = 1, 2
+Number of Inputs = 2
+
 [updateCarStatus]
 SQL1_1 = UPDATE garage SET statuses=? WHERE license=?
 SQL1_INPUTS = 1, 2
