resetConnected (idk works?) + database

--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -103,6 +103,11 @@ SQL1_1 = UPDATE users SET connected=? WHERE uid=?
 SQL1_INPUTS = 1, 2
 Number of Inputs = 2
 
+[updateConnectedStartup]
+SQL1_1 = UPDATE users SET connected=0 WHERE connected=1
+SQL1_INPUTS = 0
+Number of Inputs = 0
+
 [updateCarStatus]
 SQL1_1 = UPDATE garage SET statuses=? WHERE license=?
 SQL1_INPUTS = 1, 2
