Naprawienie bankomatu mafii + działający sytem pod odszkodowania

--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -103,10 +103,21 @@ SQL1_1 = UPDATE users SET connected=? WHERE uid=?
 SQL1_INPUTS = 1, 2
 Number of Inputs = 2
 
+[updateMafiaATM]
+SQL1_1 = UPDATE mafiaATM SET atm=?
+SQL1_INPUTS = 1
+Number of Inputs = 1
+
+[getMafiaATM]
+SQL1_1 = SELECT atm FROM mafiaatm WHERE id=?;
+SQL1_INPUTS = 1
+Number of Inputs = 1
+OUTPUT = 1
+
 [updateConnectedStartup]
-SQL1_1 = UPDATE users SET connected=0 WHERE connected=1
-SQL1_INPUTS = 0
-Number of Inputs = 0
+SQL1_1 = UPDATE users SET connected=? WHERE connected=?
+SQL1_INPUTS = 1, 2
+Number of Inputs = 2
 
 [updateCarStatus]
 SQL1_1 = UPDATE garage SET statuses=? WHERE license=?
