Dodanie funkcji zapisującej inv

--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -58,6 +58,12 @@ SQL1_1 = UPDATE users SET cash=?, bank=?, position=?,messages=?, statuses=?, hou
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10
 Number of Inputs = 10
 
+[updatePlayerInv]
+;; Name of call == updatePlayerInfoNoGear
+SQL1_1 = UPDATE users SET items=? WHERE uid=?
+SQL1_INPUTS = 1, 2
+Number of Inputs = 2
+
 
 [playerInfo]
 SQL1_1 = SELECT items, cash, bank, cop, ems, position, bankaccount, phoneBackground, messages, statuses, houselevel, housecontent, shopcontent, shopname, mafia, fire, legal, prison, prisonreason, doughnuts FROM users WHERE uid=?
