Synchronizacja na etapach: zaktualizować rpframework

--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -58,12 +58,29 @@ SQL1_1 = UPDATE users SET cash=?, bank=?, position=?,messages=?, statuses=?, hou
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10
 Number of Inputs = 10
 
+[updatePlayerInfoNoGearNoMoneyNoShop]
+;; Name of call == updatePlayerInfoNoGearNoMoneyNoShop
+SQL1_1 = UPDATE users SET position=?,messages=?, statuses=?, phoneBackground=?, houselevel=? WHERE uid=?
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6
+Number of Inputs = 6
+
 [updatePlayerInv]
-;; Name of call == updatePlayerInfoNoGear
+;; Name of call == updatePlayerInv
 SQL1_1 = UPDATE users SET items=? WHERE uid=?
 SQL1_INPUTS = 1, 2
 Number of Inputs = 2
 
+[updatePlayerMoney]
+;; Name of call == updatePlayerMoney
+SQL1_1 = UPDATE users SET cash=?, bank=? WHERE uid=?
+SQL1_INPUTS = 1, 2, 3
+Number of Inputs = 3
+
+[updatePlayerShop]
+;; Name of call == updatePlayerShop
+SQL1_1 = UPDATE users SET housecontent=?, shopcontent=? WHERE uid=?
+SQL1_INPUTS = 1, 2, 3
+Number of Inputs = 3
 
 [playerInfo]
 SQL1_1 = SELECT items, cash, bank, cop, ems, position, bankaccount, phoneBackground, messages, statuses, houselevel, housecontent, shopcontent, shopname, mafia, fire, legal, prison, prisonreason, doughnuts FROM users WHERE uid=?
