--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -93,6 +93,10 @@ SQL1_1 = INSERT INTO garage (license, class, color, finish, rims, windows, light
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9
 Number of Inputs = 9
 
+[vehicleChangeColor]
+SQL1_1 = UPDATE garage SET color=?, finish=?, rims=?, windows=?, lights=? WHERE license=?
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6
+Number of Inputs = 6
 
 [getLicense]
 SQL1_1 = SELECT license, class, color, owner FROM garage WHERE license=?;
@@ -139,6 +143,11 @@ OUTPUT = 1
 
 [updateConnectedStartup]
 SQL1_1 = UPDATE users SET connected=? WHERE connected=?
+SQL1_INPUTS = 1, 2
+Number of Inputs = 2
+
+[updateLicense]
+SQL1_1 = UPDATE garage SET license=? WHERE license=?
 SQL1_INPUTS = 1, 2
 Number of Inputs = 2
 
