--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -25,95 +25,38 @@ Strip Custom Chars = /\|;{}<>'`
 
 
 ; --------------------------------------------------------------------------------
-; SQL Statements
+; Update
 ; --------------------------------------------------------------------------------
 
-[existPlayerInfo]
-SQL1_1 = SELECT CASE WHEN EXISTS(SELECT * FROM users WHERE uid = ?) THEN 'true' ELSE 'false' END
-SQL1_INPUTS = 1
-Number of Inputs = 1
-
-[existLicense]
-SQL1_1 = SELECT CASE WHEN EXISTS(SELECT * FROM garage WHERE license = ?) THEN 'true' ELSE 'false' END
-SQL1_INPUTS = 1
-Number of Inputs = 1
-
-;;Gonna Make Phone Numbers #FuckYouKoil
-
-
-[insertPlayerInfo]
-SQL1_1 = INSERT INTO users (uid, name, items, cash, bank, cop, ems, position, phoneBackground, messages, statuses, houselevel, housecontent, shopcontent, shopname, mafia, fire, legal, prison, prisonreason) VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?);
-SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20
-Number of Inputs = 20
-
 [updatePlayerInfo]
-;; Name of call == updatePlayerInfo
 SQL1_1 = UPDATE users SET items=?, cash=?, bank=?, position=?,messages=?, statuses=?, housecontent=?, shopcontent=?, phoneBackground=?, houselevel=? WHERE uid=?
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
 Number of Inputs = 11
 
 [updatePlayerInfoNoGear]
-;; Name of call == updatePlayerInfoNoGear
 SQL1_1 = UPDATE users SET cash=?, bank=?, position=?,messages=?, statuses=?, housecontent=?, shopcontent=?, phoneBackground=?,houselevel=? WHERE uid=?
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10
 Number of Inputs = 10
 
 [updatePlayerInfoNoGearNoMoneyNoShop]
-;; Name of call == updatePlayerInfoNoGearNoMoneyNoShop
 SQL1_1 = UPDATE users SET position=?,messages=?, statuses=?, phoneBackground=?, houselevel=? WHERE uid=?
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6
 Number of Inputs = 6
 
 [updatePlayerInv]
-;; Name of call == updatePlayerInv
 SQL1_1 = UPDATE users SET items=? WHERE uid=?
 SQL1_INPUTS = 1, 2
 Number of Inputs = 2
 
 [updatePlayerMoney]
-;; Name of call == updatePlayerMoney
 SQL1_1 = UPDATE users SET cash=?, bank=? WHERE uid=?
 SQL1_INPUTS = 1, 2, 3
 Number of Inputs = 3
 
 [updatePlayerShop]
-;; Name of call == updatePlayerShop
 SQL1_1 = UPDATE users SET housecontent=?, shopcontent=? WHERE uid=?
 SQL1_INPUTS = 1, 2, 3
 Number of Inputs = 3
-
-[playerInfo]
-SQL1_1 = SELECT items, cash, bank, cop, ems, position, bankaccount, phoneBackground, messages, statuses, houselevel, housecontent, shopcontent, shopname, mafia, fire, legal, prison, prisonreason, doughnuts FROM users WHERE uid=?
-SQL1_INPUTS = 1
-Number of Inputs = 1
-OUTPUT = 1,2,3,4,5,6,7,8,9,10,11,12,13,14-String,15,16,17,18,19-String,20
-
-[insertGarage]
-SQL1_1 = INSERT INTO garage (license, class, color, finish, rims, windows, lights, owner,statuses) VALUE (?,?,?,?,?,?,?,?,?)
-SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9
-Number of Inputs = 9
-
-[vehicleChangeColor]
-SQL1_1 = UPDATE garage SET color=?, finish=?, rims=?, windows=?, lights=? WHERE license=?
-SQL1_INPUTS = 1, 2, 3, 4, 5, 6
-Number of Inputs = 6
-
-[getLicense]
-SQL1_1 = SELECT license, class, color, owner FROM garage WHERE license=?;
-SQL1_INPUTS = 1
-Number of Inputs = 1
-OUTPUT = 1-String, 2-String,3-String,4-String
-
-[getGarage]
-SQL1_1 = SELECT license, class, color, finish, rims, windows, lights,statuses, owner FROM garage WHERE owner=?;
-SQL1_INPUTS = 1
-Number of Inputs = 1
-OUTPUT = 1-String, 2-String,3-String,4-String,5-String, 6, 7, 8, 9-String
-
-[deleteGarage]
-SQL1_1 = DELETE FROM garage WHERE license=?
-SQL1_INPUTS = 1
-Number of Inputs = 1
 
 [updateHouse]
 SQL1_1 = UPDATE users SET housecontent=? WHERE uid=?
@@ -134,12 +77,6 @@ Number of Inputs = 2
 SQL1_1 = UPDATE mafiaATM SET atm=?
 SQL1_INPUTS = 1
 Number of Inputs = 1
-
-[getMafiaATM]
-SQL1_1 = SELECT atm FROM mafiaatm WHERE id=?;
-SQL1_INPUTS = 1
-Number of Inputs = 1
-OUTPUT = 1
 
 [updateConnectedStartup]
 SQL1_1 = UPDATE users SET connected=? WHERE connected=?
@@ -171,80 +108,33 @@ SQL1_1 = UPDATE users SET bank=bank + ? WHERE uid=?
 SQL1_INPUTS = 1, 2
 Number of Inputs = 2
 
-[insertMail]
-SQL1_1 = INSERT INTO mail (message, title, sender, receiver) VALUES (?,?,?,?)
-SQL1_INPUTS = 1, 2, 3, 4
-Number of Inputs = 4
-
-[getMail]
-SQL1_1 = SELECT message, title, sender FROM mail WHERE receiver=?
+[updateMayor]
+SQL1_1 = UPDATE mayor SET mayor=1 WHERE uid=?
 SQL1_INPUTS = 1
 Number of Inputs = 1
-OUTPUT = 1-String, 2-String, 3-String,4-String
-
-[insertMessage]
-SQL1_1 = INSERT INTO messages (message, title, sender, receiver) VALUES (?,?,?,?)
-SQL1_INPUTS = 1, 2, 3, 4
-Number of Inputs = 4
-
-[getMessages]
-SQL1_1 = SELECT message, title, sender FROM messages WHERE receiver=?
-SQL1_INPUTS = 1
-Number of Inputs = 1
-OUTPUT = 1-String, 2-String, 3-String,4-String
-
-[deleteCrime]
-SQL1_1 = DELETE FROM wanted WHERE suspectGUID=?
-SQL1_INPUTS = 1
-Number of Inputs = 1
-
-[insertCrime]
-SQL1_1 = INSERT INTO wanted (suspectID, officerGUID, charges, status, evidence) VALUES (?,?,?,?,?)
-SQL1_INPUTS = 1, 2, 3, 4, 5
-Number of Inputs = 5
 
 [updateCrime]
 SQL1_1 = UPDATE wanted SET suspectID, officerGUID, charges, status, evidence WHERE uid=?
 SQL1_INPUTS = 1, 2, 3, 4, 5
 Number of Inputs = 5
 
-[getCrime]
-SQL1_1 = SELECT caseID, officerGUID, charges, status, evidence FROM wanted WHERE suspectGUID=?
-SQL1_INPUTS = 1
-Number of Inputs = 1
-OUTPUT = 1-String, 2-String, 3-String, 4-String, 5-String
+[update]
+SQL1_1 = UPDATE users SET ?=? WHERE uid=?
+SQL1_INPUTS = 1, 2, 3
+Number of Inputs = 3
 
-[getCrimeType]
-SQL1_1 = SELECT caseID, officerGUID, charges, status, evidence FROM wanted WHERE status=?
-SQL1_INPUTS = 1
-Number of Inputs = 1
-OUTPUT = 1-String, 2-String, 3-String, 4-String, 5-String
-
-[logEvent]
-SQL1_1 = INSERT INTO logs (uid, name, type, text, cash, bank, pos) VALUES (?,?,?,?,?,?,?)
-SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7
-Number of Inputs = 7
-
-[getMayor]
-SQL1_1 = SELECT uid FROM users WHERE mayor=?
-SQL1_INPUTS = 1
-Number of Inputs = 1
-OUTPUT = 1-String
-
-[updateMayor]
-SQL1_1 = UPDATE mayor SET mayor=1 WHERE uid=?
-SQL1_INPUTS = 1
-Number of Inputs = 1
+[updateUsersValueString]
+SQL1_1 = UPDATE users
+SQL1_2 =    SET $CUSTOM_1$ = ?
+SQL1_3 = WHERE uid = ?;
+SQL1_INPUTS = 2, 1
+Number of Inputs = 2
+Number of Custom Inputs = 1
 
 [resetMayor]
 SQL1_1 = UPDATE mayor SET mayor=? WHERE mayor=1
 SQL1_INPUTS = 1
 Number of Inputs = 1
-
-[update]
-SQL1_1 = UPDATE users SET ?=? WHERE uid=?
-SQL1_INPUTS = 1, 2, 3
-Number of Inputs = 3
 
 [promoteCop]
 SQL1_1 = UPDATE users SET cop=? WHERE uid=?
@@ -271,13 +161,131 @@ SQL1_1 = UPDATE users SET legal=? WHERE uid=?
 SQL1_INPUTS = 1, 2
 Number of Inputs = 2
 
-[updateUsersValueString]
-SQL1_1 = UPDATE users
-SQL1_2 =    SET $CUSTOM_1$ = ?
-SQL1_3 = WHERE uid = ?;
-SQL1_INPUTS = 2, 1
-Number of Inputs = 2
-Number of Custom Inputs = 1
+[vehicleChangeColor]
+SQL1_1 = UPDATE garage SET color=?, finish=?, rims=?, windows=?, lights=? WHERE license=?
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6
+Number of Inputs = 6
+
+; --------------------------------------------------------------------------------
+; SELECT
+; --------------------------------------------------------------------------------
+
+[playerInfo]
+SQL1_1 = SELECT items, cash, bank, cop, ems, position, bankaccount, phoneBackground, messages, statuses, houselevel, housecontent, shopcontent, shopname, mafia, fire, legal, prison, prisonreason, doughnuts FROM users WHERE uid=?
+SQL1_INPUTS = 1
+Number of Inputs = 1
+OUTPUT = 1,2,3,4,5,6,7,8,9,10,11,12,13,14-String,15,16,17,18,19-String,20
+
+[getLicense]
+SQL1_1 = SELECT license, class, color, owner FROM garage WHERE license=?;
+SQL1_INPUTS = 1
+Number of Inputs = 1
+OUTPUT = 1-String, 2-String,3-String,4-String
+
+[getGarage]
+SQL1_1 = SELECT license, class, color, finish, rims, windows, lights,statuses, owner FROM garage WHERE owner=?;
+SQL1_INPUTS = 1
+Number of Inputs = 1
+OUTPUT = 1-String, 2-String,3-String,4-String,5-String, 6, 7, 8, 9-String
+
+[getMafiaATM]
+SQL1_1 = SELECT atm FROM mafiaatm WHERE id=?;
+SQL1_INPUTS = 1
+Number of Inputs = 1
+OUTPUT = 1
+
+[getMail]
+SQL1_1 = SELECT message, title, sender FROM mail WHERE receiver=?
+SQL1_INPUTS = 1
+Number of Inputs = 1
+OUTPUT = 1-String, 2-String, 3-String,4-String
+
+[getMessages]
+SQL1_1 = SELECT message, title, sender FROM messages WHERE receiver=?
+SQL1_INPUTS = 1
+Number of Inputs = 1
+OUTPUT = 1-String, 2-String, 3-String,4-String
+
+[getCrime]
+SQL1_1 = SELECT caseID, officerGUID, charges, status, evidence FROM wanted WHERE suspectGUID=?
+SQL1_INPUTS = 1
+Number of Inputs = 1
+OUTPUT = 1-String, 2-String, 3-String, 4-String, 5-String
+
+[getCrimeType]
+SQL1_1 = SELECT caseID, officerGUID, charges, status, evidence FROM wanted WHERE status=?
+SQL1_INPUTS = 1
+Number of Inputs = 1
+OUTPUT = 1-String, 2-String, 3-String, 4-String, 5-String
+
+[getMayor]
+SQL1_1 = SELECT uid FROM users WHERE mayor=?
+SQL1_INPUTS = 1
+Number of Inputs = 1
+OUTPUT = 1-String
+
+[existPlayerInfo]
+SQL1_1 = SELECT CASE WHEN EXISTS(SELECT * FROM users WHERE uid = ?) THEN 'true' ELSE 'false' END
+SQL1_INPUTS = 1
+Number of Inputs = 1
+
+[existLicense]
+SQL1_1 = SELECT CASE WHEN EXISTS(SELECT * FROM garage WHERE license = ?) THEN 'true' ELSE 'false' END
+SQL1_INPUTS = 1
+Number of Inputs = 1
+
+; --------------------------------------------------------------------------------
+; INSERT
+; --------------------------------------------------------------------------------
+
+[insertPlayerInfo]
+SQL1_1 = INSERT INTO users (uid, name, items, cash, bank, cop, ems, position, phoneBackground, messages, statuses, houselevel, housecontent, shopcontent, shopname, mafia, fire, legal, prison, prisonreason) VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?);
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20
+Number of Inputs = 20
+
+[insertGarage]
+SQL1_1 = INSERT INTO garage (license, class, color, finish, rims, windows, lights, owner,statuses) VALUE (?,?,?,?,?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9
+Number of Inputs = 9
+
+[insertMail]
+SQL1_1 = INSERT INTO mail (message, title, sender, receiver) VALUES (?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4
+Number of Inputs = 4
+
+[insertMessage]
+SQL1_1 = INSERT INTO messages (message, title, sender, receiver) VALUES (?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4
+Number of Inputs = 4
+
+[insertCrime]
+SQL1_1 = INSERT INTO wanted (suspectID, officerGUID, charges, status, evidence) VALUES (?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5
+Number of Inputs = 5
+
+[logEvent]
+SQL1_1 = INSERT INTO logs (uid, name, type, text, cash, bank, pos) VALUES (?,?,?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7
+Number of Inputs = 7
+
+[actionLog]
+SQL1_1 = INSERT INTO actionlog (playerUID, playerName, playerCash, playerBank, type, text, unitUID, unitName, unitCash, unitBank, amount) VALUES (?,?,?,?,?,?,?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
+Number of Inputs = 11
+
+; --------------------------------------------------------------------------------
+; DELETE
+; --------------------------------------------------------------------------------
+
+[deleteCrime]
+SQL1_1 = DELETE FROM wanted WHERE suspectGUID=?
+SQL1_INPUTS = 1
+Number of Inputs = 1
+
+[deleteGarage]
+SQL1_1 = DELETE FROM garage WHERE license=?
+SQL1_INPUTS = 1
+Number of Inputs = 1
 
 ;;$CUSTOM_x$ allows you to insert dynamic text into an prepared statement.
 ;;Downside is the statement isn't cached + possible less secure. 
