Cop, Vehicle, Action, Money Logs :)

--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -273,6 +273,21 @@ SQL1_1 = INSERT INTO actionlog (playerUID, playerName, playerCash, playerBank, t
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
 Number of Inputs = 11
 
+[vehicleLog]
+SQL1_1 = INSERT INTO vehiclelog (playerUID, playerName, playerCash, playerBank, type, text, vehicleClassname, vehicleName, amount) VALUES (?,?,?,?,?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9
+Number of Inputs = 9
+
+[moneyLog]
+SQL1_1 = INSERT INTO moneylog (playerUID, playerName, playerCash, playerBank, type, text, unitUID, unitName, unitCash, unitBank, amount) VALUES (?,?,?,?,?,?,?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
+Number of Inputs = 11
+
+[copLog]
+SQL1_1 = INSERT INTO coplog (playerUID, playerName, playerCash, playerBank, type, text, unitUID, unitName, unitCash, unitBank, amount) VALUES (?,?,?,?,?,?,?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
+Number of Inputs = 11
+
 ; --------------------------------------------------------------------------------
 ; DELETE
 ; --------------------------------------------------------------------------------
