--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -114,7 +114,7 @@ SQL1_INPUTS = 1
 Number of Inputs = 1
 
 [updateCrime]
-SQL1_1 = UPDATE wanted SET suspectID, officerGUID, charges, status, evidence WHERE uid=?
+SQL1_1 = UPDATE wanted SET suspectID, officerUID, charges, status, evidence WHERE uid=?
 SQL1_INPUTS = 1, 2, 3, 4, 5
 Number of Inputs = 5
 
@@ -207,16 +207,16 @@ Number of Inputs = 1
 OUTPUT = 1-String, 2-String, 3-String,4-String
 
 [getCrime]
-SQL1_1 = SELECT caseID, officerGUID, charges, status, evidence FROM wanted WHERE suspectGUID=?
+SQL1_1 = SELECT caseID, suspectName, suspectUID, officerName, officerUID, charges, status, evidence FROM wanted WHERE suspectUID=?
 SQL1_INPUTS = 1
 Number of Inputs = 1
-OUTPUT = 1-String, 2-String, 3-String, 4-String, 5-String
+OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8-String
 
 [getCrimeType]
-SQL1_1 = SELECT caseID, officerGUID, charges, status, evidence FROM wanted WHERE status=?
+SQL1_1 = SELECT caseID, suspectName, suspectUID, officerName, officerUID, charges, status, evidence FROM wanted WHERE active=?
 SQL1_INPUTS = 1
 Number of Inputs = 1
-OUTPUT = 1-String, 2-String, 3-String, 4-String, 5-String
+OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8-String
 
 [getMayor]
 SQL1_1 = SELECT uid FROM users WHERE mayor=?
@@ -259,9 +259,6 @@ SQL1_INPUTS = 1, 2, 3, 4
 Number of Inputs = 4
 
 [insertCrime]
-SQL1_1 = INSERT INTO wanted (suspectID, officerGUID, charges, status, evidence) VALUES (?,?,?,?,?)
-SQL1_INPUTS = 1, 2, 3, 4, 5
-Number of Inputs = 5
 
 [logEvent]
 SQL1_1 = INSERT INTO logs (uid, name, type, text, cash, bank, pos) VALUES (?,?,?,?,?,?,?)
@@ -293,7 +290,7 @@ Number of Inputs = 11
 ; --------------------------------------------------------------------------------
 
 [deleteCrime]
-SQL1_1 = DELETE FROM wanted WHERE suspectGUID=?
+SQL1_1 = DELETE FROM wanted WHERE suspectUID=?
 SQL1_INPUTS = 1
 Number of Inputs = 1
 
