--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -259,6 +259,9 @@ SQL1_INPUTS = 1, 2, 3, 4
 Number of Inputs = 4
 
 [insertCrime]
+SQL1_1 = INSERT INTO wanted (suspectName, suspectUID, officerName, officerUID, charges, status, evidence, active) VALUES (?,?,?,?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8
+Number of Inputs = 8
 
 [logEvent]
 SQL1_1 = INSERT INTO logs (uid, name, type, text, cash, bank, pos) VALUES (?,?,?,?,?,?,?)
