--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -288,6 +288,21 @@ SQL1_1 = INSERT INTO coplog (playerUID, playerName, playerCash, playerBank, type
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
 Number of Inputs = 11
 
+[deathLog]
+SQL1_1 = INSERT INTO deathlog (playerUID, playerName, playerCash, playerBank, type, text, unitUID, unitName, unitCash, unitBank, weapon, distance) VALUES (?,?,?,?,?,?,?,?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12
+Number of Inputs = 12
+
+[economyLog]
+SQL1_1 = INSERT INTO economylog (playerUID, playerName, playerCash, playerBank, type, text, unitUID, unitName, unitCash, unitBank, price, item, quantity) VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13
+Number of Inputs = 13
+
+[adminLog]
+SQL1_1 = INSERT INTO adminlog (playerUID, playerName, playerCash, playerBank, type, text, unitUID, unitName, unitCash, unitBank, amount) VALUES (?,?,?,?,?,?,?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
+Number of Inputs = 11
+
 ; --------------------------------------------------------------------------------
 ; DELETE
 ; --------------------------------------------------------------------------------
