Fixes, welcomeMsg, craftingLogs

--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -308,6 +308,11 @@ SQL1_1 = INSERT INTO connectionlog (playerUID, playerName, playerCash, playerBan
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9
 Number of Inputs = 9
 
+[craftLog]
+SQL1_1 = INSERT INTO craftlog (playerUID, playerName, playerCash, playerBank, type, text, classname, name) VALUES (?,?,?,?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8
+Number of Inputs = 8
+
 ; --------------------------------------------------------------------------------
 ; DELETE
 ; --------------------------------------------------------------------------------
