--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -88,6 +88,7 @@ SQL1_1 = UPDATE garage SET license=? WHERE license=?
 SQL1_INPUTS = 1, 2
 Number of Inputs = 2
 
+
 [updateCarStatus]
 SQL1_1 = UPDATE garage SET statuses=? WHERE license=?
 SQL1_INPUTS = 1, 2
@@ -193,6 +194,9 @@ SQL1_1 = SELECT atm FROM mafiaatm WHERE id=?;
 SQL1_INPUTS = 1
 Number of Inputs = 1
 OUTPUT = 1
+
+SQL1_INPUTS = 1
+Number of Inputs = 1
 
 [getMail]
 SQL1_1 = SELECT message, title, sender FROM mail WHERE receiver=?
