--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -88,6 +88,10 @@ SQL1_1 = UPDATE garage SET license=? WHERE license=?
 SQL1_INPUTS = 1, 2
 Number of Inputs = 2
 
+[updateVehicleFuel]
+SQL1_1 = UPDATE garage SET fuel=? WHERE uid=?
+SQL1_INPUTS = 1, 2
+Number of Inputs = 2
 
 [updateCarStatus]
 SQL1_1 = UPDATE garage SET statuses=? WHERE license=?
@@ -195,8 +199,11 @@ SQL1_INPUTS = 1
 Number of Inputs = 1
 OUTPUT = 1
 
+[getVehicleFuel]
+SQL1_1 = SELECT fuel FROM garage WHERE license=?;
 SQL1_INPUTS = 1
 Number of Inputs = 1
+OUTPUT = 1
 
 [getMail]
 SQL1_1 = SELECT message, title, sender FROM mail WHERE receiver=?
