sync money, repair saving jail, changed start fresh loc

--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -53,6 +53,21 @@ SQL1_1 = UPDATE users SET cash=?, bank=? WHERE uid=?
 SQL1_INPUTS = 1, 2, 3
 Number of Inputs = 3
 
+[updatePlayerMoneyWallet]
+SQL1_1 = UPDATE users SET cash=? WHERE uid=?
+SQL1_INPUTS = 1, 2
+Number of Inputs = 2
+
+[updatePlayerMoneyATM]
+SQL1_1 = UPDATE users SET bank=? WHERE uid=?
+SQL1_INPUTS = 1, 2
+Number of Inputs = 2
+
+[updatePlayerPrisonTimeReason]
+SQL1_1 = UPDATE users SET prisontime=?, prisonreason=? WHERE uid=?
+SQL1_INPUTS = 1, 2, 3
+Number of Inputs = 3
+
 [updatePlayerShop]
 SQL1_1 = UPDATE users SET housecontent=?, shopcontent=? WHERE uid=?
 SQL1_INPUTS = 1, 2, 3
@@ -176,7 +191,7 @@ Number of Inputs = 6
 ; --------------------------------------------------------------------------------
 
 [playerInfo]
-SQL1_1 = SELECT items, cash, bank, cop, ems, position, bankaccount, phoneBackground, messages, statuses, houselevel, housecontent, shopcontent, shopname, mafia, fire, legal, prison, prisonreason, doughnuts FROM users WHERE uid=?
+SQL1_1 = SELECT items, cash, bank, cop, ems, position, bankaccount, phoneBackground, messages, statuses, houselevel, housecontent, shopcontent, shopname, mafia, fire, legal, prisontime, prisonreason, doughnuts FROM users WHERE uid=?
 SQL1_INPUTS = 1
 Number of Inputs = 1
 OUTPUT = 1,2,3,4,5,6,7,8,9,10,11,12,13,14-String,15,16,17,18,19-String,20
@@ -250,7 +265,7 @@ Number of Inputs = 1
 ; --------------------------------------------------------------------------------
 
 [insertPlayerInfo]
-SQL1_1 = INSERT INTO users (uid, name, items, cash, bank, cop, ems, position, phoneBackground, messages, statuses, houselevel, housecontent, shopcontent, shopname, mafia, fire, legal, prison, prisonreason) VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?);
+SQL1_1 = INSERT INTO users (uid, name, items, cash, bank, cop, ems, position, phoneBackground, messages, statuses, houselevel, housecontent, shopcontent, shopname, mafia, fire, legal, prisontime, prisonreason) VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?);
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20
 Number of Inputs = 20
 
