--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -33,6 +33,11 @@ SQL1_1 = UPDATE users SET items=?, cash=?, bank=?, position=?,messages=?, status
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
 Number of Inputs = 11
 
+[updatePlayerInfoNoShopNoHouse]
+SQL1_1 = UPDATE users SET items=?, cash=?, bank=?, position=?,messages=?, statuses=?, phoneBackground=?, houselevel=? WHERE uid=?
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9
+Number of Inputs = 9
+
 [updatePlayerInfoNoGear]
 SQL1_1 = UPDATE users SET cash=?, bank=?, position=?,messages=?, statuses=?, housecontent=?, shopcontent=?, phoneBackground=?,houselevel=? WHERE uid=?
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10
@@ -42,6 +47,11 @@ Number of Inputs = 10
 SQL1_1 = UPDATE users SET position=?,messages=?, statuses=?, phoneBackground=?, houselevel=? WHERE uid=?
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6
 Number of Inputs = 6
+
+[updatePlayerInfoNoGearNoShopNoHouse]
+SQL1_1 = UPDATE users SET cash=?, bank=?, position=?,messages=?, statuses=?, phoneBackground=?,houselevel=? WHERE uid=?
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8
+Number of Inputs = 8
 
 [updatePlayerInv]
 SQL1_1 = UPDATE users SET items=? WHERE uid=?
@@ -68,7 +78,7 @@ SQL1_1 = UPDATE users SET prisontime=?, prisonreason=? WHERE uid=?
 SQL1_INPUTS = 1, 2, 3
 Number of Inputs = 3
 
-[updatePlayerShop]
+[updatePlayerHouseShop]
 SQL1_1 = UPDATE users SET housecontent=?, shopcontent=? WHERE uid=?
 SQL1_INPUTS = 1, 2, 3
 Number of Inputs = 3
