--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -201,7 +201,7 @@ Number of Inputs = 6
 ; --------------------------------------------------------------------------------
 
 [playerInfo]
-SQL1_1 = SELECT items, cash, bank, cop, ems, position, bankaccount, phoneBackground, messages, statuses, houselevel, housecontent, shopcontent, shopname, mafia, fire, legal, prisontime, prisonreason, doughnuts, phonering FROM users WHERE uid=?
+SQL1_1 = SELECT items, cash, bank, cop, ems, position, bankaccount, phoneBackground, messages, statuses, houselevel, housecontent, shopcontent, shopname, mafia, fire, legal, prisontime, prisonreason, doughnuts FROM users WHERE uid=?
 SQL1_INPUTS = 1
 Number of Inputs = 1
 OUTPUT = 1,2,3,4,5,6,7,8,9,10,11,12,13,14-String,15,16,17,18,19-String,20
