small fixes sync, speed bomb, teczki z kasa, fixes etc

--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -34,9 +34,9 @@ SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
 Number of Inputs = 11
 
 [updatePlayerInfoNoShopNoHouse]
-SQL1_1 = UPDATE users SET items=?, cash=?, bank=?, position=?,messages=?, statuses=?, phoneBackground=?, houselevel=? WHERE uid=?
-SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9
-Number of Inputs = 9
+SQL1_1 = UPDATE users SET items=?, cash=?, bank=?, position=?,messages=?, statuses=?, houselevel=? WHERE uid=?
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8
+Number of Inputs = 8
 
 [updatePlayerInfoNoGear]
 SQL1_1 = UPDATE users SET cash=?, bank=?, position=?,messages=?, statuses=?, housecontent=?, shopcontent=?, phoneBackground=?,houselevel=? WHERE uid=?
@@ -49,12 +49,17 @@ SQL1_INPUTS = 1, 2, 3, 4, 5, 6
 Number of Inputs = 6
 
 [updatePlayerInfoNoGearNoShopNoHouse]
-SQL1_1 = UPDATE users SET cash=?, bank=?, position=?,messages=?, statuses=?, phoneBackground=?,houselevel=? WHERE uid=?
-SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8
-Number of Inputs = 8
+SQL1_1 = UPDATE users SET cash=?, bank=?, position=?,messages=?, statuses=?, houselevel=? WHERE uid=?
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7
+Number of Inputs = 7
 
 [updatePlayerInv]
 SQL1_1 = UPDATE users SET items=? WHERE uid=?
+SQL1_INPUTS = 1, 2
+Number of Inputs = 2
+
+[updatePlayerPhoneBackground]
+SQL1_1 = UPDATE users SET phoneBackground=? WHERE uid=?
 SQL1_INPUTS = 1, 2
 Number of Inputs = 2
 
