Zabezpieczenia dodatkowe do tablic reje, pojazdy

--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -134,7 +134,7 @@ SQL1_INPUTS = 1, 2
 Number of Inputs = 2
 
 [updateVehicleFuel]
-SQL1_1 = UPDATE garage SET fuel=? WHERE uid=?
+SQL1_1 = UPDATE garage SET fuel=? WHERE license=?
 SQL1_INPUTS = 1, 2
 Number of Inputs = 2
 
