Zapisywanie paliwa, obrażeń pojazdów. Zmiany w systemie damage, tahoe uc, zabezpieczenie przed wyciaganiem itemow po zniknicu skrzyni

--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -133,15 +133,10 @@ SQL1_1 = UPDATE garage SET license=? WHERE license=?
 SQL1_INPUTS = 1, 2
 Number of Inputs = 2
 
-[updateVehicleFuel]
-SQL1_1 = UPDATE garage SET fuel=? WHERE license=?
-SQL1_INPUTS = 1, 2
-Number of Inputs = 2
-
-[updateCarStatus]
-SQL1_1 = UPDATE garage SET statuses=? WHERE license=?
-SQL1_INPUTS = 1, 2
-Number of Inputs = 2
+[updateVehicleFuelDamage]
+SQL1_1 = UPDATE garage SET fuel=?, damage=? WHERE license=?
+SQL1_INPUTS = 1, 2, 3
+Number of Inputs = 3
 
 [updateVehClass]
 SQL1_1 = UPDATE garage SET class=? WHERE license=?
@@ -233,7 +228,7 @@ Number of Inputs = 1
 OUTPUT = 1-String, 2-String,3-String,4-String
 
 [getGarage]
-SQL1_1 = SELECT license, class, color, finish, rims, windows, lights,statuses, owner FROM garage WHERE owner=?;
+SQL1_1 = SELECT license, class, color, finish, rims, windows, lights, statuses, owner, fuel, damage FROM garage WHERE owner=?;
 SQL1_INPUTS = 1
 Number of Inputs = 1
 OUTPUT = 1-String, 2-String,3-String,4-String,5-String, 6, 7, 8, 9-String
@@ -244,8 +239,8 @@ SQL1_INPUTS = 1
 Number of Inputs = 1
 OUTPUT = 1
 
-[getVehicleFuel]
-SQL1_1 = SELECT fuel FROM garage WHERE license=?;
+[getVehicleStatus]
+SQL1_1 = SELECT status FROM garage WHERE license=?;
 SQL1_INPUTS = 1
 Number of Inputs = 1
 OUTPUT = 1
