Czyszczenie z pojazdów damage=1;logi o wynajęciu biura

--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -373,6 +373,11 @@ SQL1_1 = DELETE FROM garage WHERE license=?
 SQL1_INPUTS = 1
 Number of Inputs = 1
 
+[deleteGarageDamage]
+SQL1_1 = DELETE FROM garage WHERE damage=?
+SQL1_INPUTS = 1
+Number of Inputs = 1
+
 ;;$CUSTOM_x$ allows you to insert dynamic text into an prepared statement.
 ;;Downside is the statement isn't cached + possible less secure. 
 
