Fix usuwania z watnedlisty

--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -159,9 +159,9 @@ SQL1_INPUTS = 1
 Number of Inputs = 1
 
 [updateCrime]
-SQL1_1 = UPDATE wanted SET suspectID, officerUID, charges, status, evidence WHERE uid=?
-SQL1_INPUTS = 1, 2, 3, 4, 5
-Number of Inputs = 5
+SQL1_1 = UPDATE wanted SET status=?, active=? WHERE uid=?
+SQL1_INPUTS = 1, 2, 3
+Number of Inputs = 3
 
 [update]
 SQL1_1 = UPDATE users SET ?=? WHERE uid=?
