--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -88,6 +88,11 @@ SQL1_1 = UPDATE users SET statuses=? WHERE uid=?
 SQL1_INPUTS = 1, 2
 Number of Inputs = 2
 
+[updatePlayerRespawn]
+SQL1_1 = UPDATE users SET respawn=? WHERE uid=?
+SQL1_INPUTS = 1, 2
+Number of Inputs = 2
+
 [updatePlayerPosition]
 SQL1_1 = UPDATE users SET position=? WHERE uid=?
 SQL1_INPUTS = 1, 2
@@ -124,9 +129,14 @@ SQL1_INPUTS = 1
 Number of Inputs = 1
 
 [updateConnectedStartup]
-SQL1_1 = UPDATE users SET connected=? WHERE connected=?
-SQL1_INPUTS = 1, 2
-Number of Inputs = 2
+SQL1_1 = UPDATE users SET connected=?
+SQL1_INPUTS = 1
+Number of Inputs = 1
+
+[updateResetRespawn]
+SQL1_1 = UPDATE users SET respawn=?
+SQL1_INPUTS = 1
+Number of Inputs = 1
 
 [updateLicense]
 SQL1_1 = UPDATE garage SET license=? WHERE license=?
@@ -216,10 +226,10 @@ Number of Inputs = 6
 ; --------------------------------------------------------------------------------
 
 [playerInfo]
-SQL1_1 = SELECT items, cash, bank, cop, ems, position, bankaccount, phoneBackground, messages, statuses, houselevel, housecontent, shopcontent, shopname, mafia, fire, legal, prisontime, prisonreason, doughnuts FROM users WHERE uid=?
+SQL1_1 = SELECT items, cash, bank, cop, ems, position, bankaccount, phoneBackground, messages, statuses, houselevel, housecontent, shopcontent, shopname, mafia, fire, legal, prisontime, prisonreason, doughnuts, respawn FROM users WHERE uid=?
 SQL1_INPUTS = 1
 Number of Inputs = 1
-OUTPUT = 1,2,3,4,5,6,7,8,9,10,11,12,13,14-String,15,16,17,18,19-String,20
+OUTPUT = 1,2,3,4,5,6,7,8,9,10,11,12,13,14-String,15,16,17,18,19-String,20,21
 
 [getLicense]
 SQL1_1 = SELECT license, class, color, owner FROM garage WHERE license=?;
