--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -38,6 +38,11 @@ SQL1_1 = UPDATE users SET items=?, cash=?, bank=?, position=?, messages=? WHERE 
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6
 Number of Inputs = 6
 
+[updatePlayerInfoNoShopNoHouseNoMoney]
+SQL1_1 = UPDATE users SET items=?, position=?, messages=? WHERE uid=?
+SQL1_INPUTS = 1, 2, 3, 4
+Number of Inputs = 4
+
 [updatePlayerInfoNoGear]
 SQL1_1 = UPDATE users SET cash=?, bank=?, position=?,messages=?, statuses=?, housecontent=?, shopcontent=?, phoneBackground=?,houselevel=? WHERE uid=?
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10
@@ -52,6 +57,11 @@ Number of Inputs = 6
 SQL1_1 = UPDATE users SET cash=?, bank=?, position=?, messages=? WHERE uid=?
 SQL1_INPUTS = 1, 2, 3, 4, 5
 Number of Inputs = 5
+
+[updatePlayerInfoNoGearNoShopNoHouseNoMoney]
+SQL1_1 = UPDATE users SET position=?, messages=? WHERE uid=?
+SQL1_INPUTS = 1, 2, 3
+Number of Inputs = 3
 
 [updatePlayerInv]
 SQL1_1 = UPDATE users SET items=? WHERE uid=?
