--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -395,6 +395,11 @@ SQL1_1 = INSERT INTO companies (short_name, name, uid_owner) VALUES (?,?,?)
 SQL1_INPUTS = 1, 2, 3
 Number of Inputs = 3
 
+[insertCompanyApplicant]
+SQL1_1 = INSERT INTO company_applicants (id_company, uid_player) VALUES (?,?)
+SQL1_INPUTS = 1, 2
+Number of Inputs = 2
+
 [insertCompanyMember]
 SQL1_1 = INSERT INTO company_members (id_company, uid_player, level) VALUES (?,?,?)
 SQL1_INPUTS = 1, 2, 3,
@@ -409,6 +414,21 @@ Number of Inputs = 9
 SQL1_1 = UPDATE companies SET short_name=?, name=?, bank=?, members_current=?, members_max=?, level=? WHERE id=?
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7
 Number of Inputs = 7
+
+[updateCompany_bank]
+SQL1_1 = UPDATE companies SET bank=? WHERE id=?
+SQL1_INPUTS = 1, 2
+Number of Inputs = 2
+
+[updateCompany_level]
+SQL1_1 = UPDATE companies SET level=? WHERE id=?
+SQL1_INPUTS = 1, 2
+Number of Inputs = 2
+
+[updateCompany_members] 
+SQL1_1 = UPDATE companies SET members_current=?, members_max=? WHERE id=?
+SQL1_INPUTS = 1, 2, 3
+Number of Inputs = 3
 
 [updateCompanyMember]
 SQL1_1 = UPDATE company_members SET level=? WHERE uid_player=?
@@ -460,6 +480,11 @@ SQL1_1 = DELETE FROM company_garage WHERE license=?
 SQL1_INPUTS = 1
 Number of Inputs = 1
 
+[deleteCompanyApplicant]
+SQL1_1 = DELETE FROM company_applicants WHERE uid_player=? AND id_company=?
+SQL1_INPUTS = 1, 2
+Number of Inputs = 2
+
 [getCompany_id]
 SQL1_1 = SELECT id, short_name, name, bank, uid_owner, members_current, members_max, level FROM companies WHERE id=?
 SQL1_INPUTS = 1
@@ -471,6 +496,12 @@ SQL1_1 = SELECT companies.id, companies.short_name, companies.name, companies.ba
 SQL1_INPUTS = 1
 Number of Inputs = 1
 OUTPUT = 1, 2-String, 3-String, 4, 5-String, 6, 7, 8, 9
+
+[getCompanyApplicant_all]
+SQL1_1 SELECT company_applicants.id, company_applicants.id_company, company_applicants.uid_player, users.name FROM company_applicants INNER JOIN users ON company_applicants.uid_player=users.uid WHERE company_applicants.id_company=?
+SQL1_INPUTS = 1
+Number of Inputs = 1
+OUTPUT = 1, 2, 3-String, 4-String
 
 [getCompanyVehicle_id]
 SQL1_1 = SELECT license, class, color, finish, rims, windows, lights, skin, statuses, fuel, damage FROM company_garage WHERE license=?;
