--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -179,7 +179,7 @@ SQL1_INPUTS = 1
 Number of Inputs = 1
 
 [updateCrime]
-SQL1_1 = UPDATE wanted SET status=?, active=? WHERE uid=?
+SQL1_1 = UPDATE wanted SET status=?, active=? WHERE caseID=?
 SQL1_INPUTS = 1, 2, 3
 Number of Inputs = 3
 
@@ -278,7 +278,7 @@ Number of Inputs = 1
 OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8-String
 
 [getCrimeType]
-SQL1_1 = SELECT caseID, suspectName, suspectUID, officerName, officerUID, charges, status, evidence FROM wanted WHERE active=?
+SQL1_1 = SELECT caseID, suspectName, suspectUID, officerName, officerUID, charges, status, evidence FROM wanted WHERE active=? ORDER BY caseID DESC
 SQL1_INPUTS = 1
 Number of Inputs = 1
 OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8-String
@@ -524,8 +524,8 @@ OUTPUT = 1-String, 2-String,3-String,4-String,5-String, 6, 7, 8-String, 9-String
 
 [getCompanyVehicle_available]
 SQL1_1 = SELECT license, class, color, finish FROM company_garage WHERE id_company=? AND active=0 AND level<=?;
-SQL1_INPUTS = 3
-Number of Inputs = 1, 2, 3
+SQL1_INPUTS = 1, 2, 3
+Number of Inputs = 3
 OUTPUT = 1-String, 2-String, 3-String, 4-String
 
 [getCompanyVehicle_all]
